--- a/components/select-input.html
+++ b/components/select-input.html
@@ -640,6 +640,26 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="select-input">Select Input</h1>
+<p>A select input component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </p>
+<h4 id="example">Example:</h4>
+<pre><code class="lang-js"><span class="token operator">&lt;</span>SelectInput
+    legend<span class="token operator">=</span><span class="token string">&quot;Choose the test direction&quot;</span>
+    defaultValue<span class="token operator">=</span><span class="token string">&quot;two-sided&quot;</span>
+    options<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
+        <span class="token string">&apos;left-sided&apos;</span><span class="token punctuation">,</span>
+        <span class="token string">&apos;right-sided&apos;</span><span class="token punctuation">,</span>
+        <span class="token string">&apos;two-sided&apos;</span>
+    <span class="token punctuation">]</span><span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>defaultValue</strong>: The option the select input is initialized with. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>inline</strong>: <code>boolean</code> indicating whether the element should be displayed inline. Default: <code>false</code>.</li>
+<li><strong>legend</strong>: <code>string</code> to be displayed as the title of te component. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the slider value. Default: <code>null</code>.</li>
+<li><strong>options</strong>: <code>Array</code> of options for the select input element. Default: <code>[]</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -683,7 +703,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Select Input","level":"1.4.2.3","depth":3,"next":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"previous":{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/select-input.md","mtime":"2016-11-11T08:21:04.663Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-17T20:44:32.220Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Select Input","level":"1.4.2.3","depth":3,"next":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"previous":{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/select-input.md","mtime":"2016-11-21T04:41:49.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-21T04:43:47.107Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
